--- a/composer.json
+++ b/composer.json
@@ -5,14 +5,17 @@
     "minimum-stability": "dev",
     "license": "MIT",
     "require": {
-        "php": ">=5.6.4",
+        "php": ">=7",
         "php-pm/php-pm": "dev-master",
         "php-pm/httpkernel-adapter": "dev-master",
         "php-pm/zend-adapter": "dev-master",
         "php-pm/drupal-adapter": "dev-master",
         "php-pm/psr7-adapter": "dev-master",
         "react/http": "dev-master#cd15204bd15d106d7832c680e4fb0ca0ce2f5e30",
-        "symfony/finder": "3.3.*"
+        "symfony/debug": "~3.3.6",
+        "symfony/process": "~3.3.6",
+        "symfony/console": "~3.3.6",
+        "symfony/finder": "~3.3.6"
     },
     "autoload": {
         "psr-4": {
