--- a/composer.json
+++ b/composer.json
@@ -6,17 +6,14 @@
     "license": "MIT",
     "require": {
         "php": ">=7",
-        "php-pm/php-pm": "dev-master",
-        "php-pm/httpkernel-adapter": "dev-master",
-        "php-pm/zend-adapter": "dev-master",
-        "php-pm/drupal-adapter": "dev-master",
-        "react/http": "dev-master",
-        "symfony/debug": "3.3.13",
-        "symfony/http-foundation": "3.3.13",
-        "symfony/http-kernel": "3.3.13",
-        "symfony/process": "3.3.13",
-        "symfony/console": "3.3.13",
-        "symfony/finder": "3.3.13"
+        "php-pm/php-pm": "^1.0",
+        "php-pm/httpkernel-adapter": "^1.0",
+        "symfony/debug": "^3.3|^4.0",
+        "symfony/http-foundation": "^3.3|^4.0",
+        "symfony/http-kernel": "^3.3|^4.0",
+        "symfony/process": "^3.3|^4.0",
+        "symfony/console": "^3.3|^4.0",
+        "symfony/finder": "^3.3|^4.0"
     },
     "autoload": {
         "psr-4": {
