--- a/composer.json
+++ b/composer.json
@@ -7,8 +7,8 @@
         "php": ">=7",
         "php-pm/php-pm": "^1.0",
         "php-pm/httpkernel-adapter": "^1.0",
-        "symfony/console": "^3.3|^4.0",
-        "symfony/finder": "^3.3|^4.0"
+        "symfony/console": "^4.0",
+        "symfony/finder": "^4.0"
     },
     "autoload": {
         "psr-4": {
