--- a/composer.json
+++ b/composer.json
@@ -5,9 +5,10 @@
     "license": "MIT",
     "require": {
         "php": ">=7",
-        "php-pm/php-pm": "^1.0",
-        "php-pm/httpkernel-adapter": "^1.0",
+        "php-pm/php-pm": "^2.0",
+        "php-pm/httpkernel-adapter": "^2.0",
         "symfony/console": "^4.0",
+        "symfony/config": "^4.0",
         "symfony/finder": "^4.0"
     },
     "autoload": {
