--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,7 +31,7 @@ jobs:
           release_name: Release ${{ github.ref }}
           draft: false
           prerelease: false
-      - name: Upload Release Asset
+      - name: Upload Release Phar Asset
         id: upload-release-asset 
         uses: actions/upload-release-asset@v1.0.1
         env:
@@ -40,4 +40,14 @@ jobs:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: ./ppm.phar
           asset_name: ppm.phar
+          asset_content_type: application/octet-stream
+      - name: Upload Release Checksums Asset
+        id: upload-release-asset
+        uses: actions/upload-release-asset@v1.0.1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: ./ppm_checksums.txt
+          asset_name: ppm_checksums.txt
           asset_content_type: application/octet-stream
