--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
     "license": "MIT",
     "require": {
         "php": ">=7",
+        "ext-json": "*",
         "php-pm/php-pm": "^2.0",
         "php-pm/httpkernel-adapter": "^2.0",
         "symfony/console": "^5.0",
