--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
         "php": ">=7",
         "ext-json": "*",
         "php-pm/php-pm": "^2.0",
-        "php-pm/httpkernel-adapter": "^2.0",
+        "php-pm/httpkernel-adapter": ">=2.0.4 <3.0",
         "symfony/console": "^5.0",
         "symfony/config": "^5.0",
         "symfony/finder": "^5.0"
