--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,12 +12,12 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@master
       - name: Setup PHP
-        uses: shivammathur/setup-php@v1
+        uses: shivammathur/setup-php@2.2.2
         with:
           php-version: '7.3'
           extensions: mbstring, intl, posix, pcntl
           ini-values: memory_limit=256M, max_execution_time=0, phar.readonly=0
-          pecl: false
+          tools: pecl, phpize, composer
       - name: Build project
         run: |
           bin/compile
