Update to Symfony 6

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,10 @@ composer.phar
 ppm.phar
 ppm.json
 /vendor/
+/bin/*
+!/bin/compile
+!/bin/ppm
+!/bin/run
 .idea
 build
 # Commit your application's lock file http://getcomposer.org/doc/01-basic-usage.md#composer-lock-the-lock-file
