--- a/composer.json
+++ b/composer.json
@@ -4,14 +4,17 @@
     "description": "Phar archive builder for php-pm",
     "license": "MIT",
     "require": {
-        "php": ">=7.4",
+        "php": "^8.0",
         "ext-json": "*",
-        "php-pm/php-pm": "^2.2",
-        "php-pm/httpkernel-adapter": ">=2.0.6 <3.0",
-        "symfony/console": "5.4.*",
-        "symfony/config": "5.4.*",
-        "symfony/dotenv": "5.4.*",
-        "symfony/finder": "5.4.*"
+        "php-pm/php-pm": "^2.3",
+        "php-pm/httpkernel-adapter": "^2.3",
+        "symfony/console": "6.0.*",
+        "symfony/config": "6.0.*",
+        "symfony/dotenv": "6.0.*",
+        "symfony/finder": "6.0.*"
+    },
+    "require-dev": {
+        "symfony/dependency-injection": "6.0.*"
     },
     "autoload": {
         "psr-4": {
